--- a/client/src/views/ProposalView/style.module.scss
+++ b/client/src/views/ProposalView/style.module.scss
@@ -23,8 +23,8 @@
 }
 
 .proposalHeader, .body, .donors {
-  padding-left: $layoutBodyMarginHorizontal;
-  padding-right: $layoutBodyMarginHorizontal;
+  padding-left: $layoutMarginHorizontal;
+  padding-right: $layoutMarginHorizontal;
 }
 
 .proposalHeader {
