--- a/client/src/components/core/Button/style.module.scss
+++ b/client/src/components/core/Button/style.module.scss
@@ -8,6 +8,7 @@
   font-weight: $font-weight-bold;
   border: 0;
   min-height: 4rem;
+  font-size: $font-size-14;
 
   &.isDisabled {
     cursor: default;
