--- a/client/src/layouts/MainLayout/style.module.scss
+++ b/client/src/layouts/MainLayout/style.module.scss
@@ -4,6 +4,7 @@ $headerNavigationBorderRadius: calc($headerNavigationHeight / 2);
   display: flex;
   flex-direction: column;
   min-height: 100%;
+  min-width: 39rem;
   max-width: 70.8rem + $layoutMarginHorizontal * 2;
   margin: 0 auto;
 }
@@ -95,16 +96,23 @@ $headerNavigationBorderRadius: calc($headerNavigationHeight / 2);
   }
 }
 
-.navigation {
+.navigationWrapper {
+  display: flex;
+  justify-content: center;
   position: fixed;
   bottom: $layoutMarginHorizontal;
-  left: 50%;
-  transform: translate(-50%, 0);;
+  left: 0;
+  width: 100%;
+  padding: 0 $layoutMarginHorizontal;
+  z-index: $z-index-4;
+}
+
+.navigation {
   border-radius: $headerNavigationBorderRadius;
   background: $color-white;
   box-shadow: $box-shadow-1;
+  width: 100%;
   max-width: 37.8rem;
-  z-index: $z-index-4;
 
   &.hasNavigationBottomSuffix {
     border-radius: 1.6rem 1.6rem $headerNavigationBorderRadius $headerNavigationBorderRadius;
