--- a/client/src/styles/utils/_variables.scss
+++ b/client/src/styles/utils/_variables.scss
@@ -3,6 +3,7 @@ $border-radius-04: 0.4rem;
 $border-radius-10: 1rem;
 $border-radius-16: 1.6rem;
 $border-radius-20: 2rem;
+$border-radius-32: 3.2rem;
 
 $box-shadow-1: 0px 0px 25px rgba(0, 0, 0, 0.05);
 
