--- a/client/src/components/dedicated/AllocationItem/style.module.scss
+++ b/client/src/components/dedicated/AllocationItem/style.module.scss
@@ -16,11 +16,13 @@
 .name {
   font-size: $font-size-14;
   margin: 0 0 0.3rem 0;
+  white-space: nowrap;
 }
 
 .funds {
   display: flex;
-  font-weight: $font-weight-semibold
+  font-weight: $font-weight-semibold;
+  white-space: nowrap;
 }
 
 .indicator {
@@ -56,7 +58,7 @@
 .buttons {
   display: flex;
   flex-direction: column;
-  border-left: 0.1rem solid $color-hexagon-grey4;
+  width: 6.4rem;
 
   &.isSelected {
     svg path {
@@ -66,6 +68,8 @@
 }
 
 .button {
+  width: 100%;
+
   &:first-child {
     border-bottom: 0.1rem solid $color-hexagon-grey4;
   }
