--- a/client/src/styles/utils/_colors.scss
+++ b/client/src/styles/utils/_colors.scss
@@ -13,6 +13,7 @@ $color-hexagon-grey8: #D9D9D9;
 $color-hexagon-grey9: #685B8A;
 $color-hexagon-grey10: #9E9FA3;
 $color-hexagon-grey11: #E0E0E0;
+$color-hexagon-grey12: #F3F3F3;
 $color-hexagon-green: #2D9B87;
 $color-hexagon-green2: #5B8A81;
 $color-hexagon-green3: #1D4558;
@@ -21,3 +22,5 @@ $color-hexagon-green5: #ADE2B3;
 $color-hexagon-red: #D0623F;
 $color-hexagon-red2: #E23600;
 $color-hexagon-orange: #FF6157;
+
+
