HEX-208  Bottom menu bar fixes -- new icons

--- a/client/src/components/core/Button/style.module.scss
+++ b/client/src/components/core/Button/style.module.scss
@@ -63,7 +63,7 @@
       color: $color-hexagon-grey3;
       stroke: $color-hexagon-grey3;
 
-      path, circle {
+      path, circle, rect {
         color: $color-hexagon-grey3;
         stroke: $color-hexagon-grey3;
       }
@@ -80,7 +80,7 @@
         color: $color-hexagon-green3;
         stroke: $color-hexagon-green3;
 
-        path, circle {
+        path, circle, rect {
           color: $color-hexagon-green3;
           stroke: $color-hexagon-green3;
         }
