--- a/client/src/layouts/MainLayout/style.module.scss
+++ b/client/src/layouts/MainLayout/style.module.scss
@@ -105,6 +105,7 @@ $headerNavigationBorderRadius: $border-radius-32;
   width: 100%;
   padding: 0 $layoutMarginHorizontal;
   z-index: $z-index-4;
+  pointer-events: none;
 }
 
 .navigation {
@@ -113,6 +114,7 @@ $headerNavigationBorderRadius: $border-radius-32;
   box-shadow: $box-shadow-1;
   width: 100%;
   max-width: 37.8rem;
+  pointer-events: initial;
 
   &.hasNavigationBottomSuffix {
     border-radius: 1.6rem 1.6rem $headerNavigationBorderRadius $headerNavigationBorderRadius;
@@ -149,7 +151,7 @@ $headerNavigationBorderRadius: $border-radius-32;
   height: 1.2rem;
   width: 1.2rem;
   position: absolute;
-  bottom: 0.6rem;
+  bottom: 0.7rem;
   right: 0.5rem;
   color: $color-white;
   font-size: $font-size-07;
