HEX-142 Update client to fetch data from The Graph && HEX-152 Client | History of operations

--- a/client/src/styles/utils/_colors.scss
+++ b/client/src/styles/utils/_colors.scss
@@ -13,6 +13,7 @@ $color-hexagon-grey8: #D9D9D9;
 $color-hexagon-grey10: #9E9FA3;
 $color-hexagon-grey11: #E0E0E0;
 $color-hexagon-grey12: #F3F3F3;
+$color-hexagon-grey13: #9C9C9C;
 $color-hexagon-green: #2D9B87;
 $color-hexagon-green2: #5B8A81;
 $color-hexagon-green3: #1D4558;
