HEX-247 Implement onboarding flow && HEX-167 Enable option "Always show Allocate onboarding"

--- a/client/src/components/core/Button/style.module.scss
+++ b/client/src/components/core/Button/style.module.scss
@@ -132,6 +132,16 @@
       }
     }
   }
+
+  &link3 {
+    position: relative;
+    height: auto;
+    display: inline;
+    color: $color-hexagon-green;
+    padding: 0;
+    font-size: 1.6rem;
+    text-decoration: underline;
+  }
 }
 
 .icon {
