--- a/client/src/styles/utils/_typography.scss
+++ b/client/src/styles/utils/_typography.scss
@@ -9,5 +9,6 @@ $font-size-10: 1rem;
 $font-size-08: 0.8rem;
 $font-size-07: 0.7rem;
 
+$font-weight-superbold: 700;
 $font-weight-bold: 600;
 $font-weight-semibold: 500;
