--- a/client/src/styles/utils/_variables.scss
+++ b/client/src/styles/utils/_variables.scss
@@ -19,3 +19,4 @@ $headerNavigationHeight: 7.2rem;
 $layoutBodyMarginTop: 1.6rem;
 $layoutMarginHorizontal: 2.4rem;
 $layoutBodyMarginBottom: $headerNavigationHeight + 2 * $layoutMarginHorizontal;
+$modalPadding: 3.2rem;
