HEX-255 Optimize useProposals hook -- add caching

--- a/client/src/components/core/BoxRounded/BoxRounded.module.scss
+++ b/client/src/components/core/BoxRounded/BoxRounded.module.scss
@@ -77,7 +77,7 @@
   font-weight: $font-weight-bold;
   margin: 0 0 0.5rem 0;
 
-  &.isExpandable {
+  &.isPaddingMovedToElements {
     display: flex;
     align-items: center;
     justify-content: space-between;
