--- a/client/src/components/core/DoubleValue/DoubleValue.module.scss
+++ b/client/src/components/core/DoubleValue/DoubleValue.module.scss
@@ -1,5 +1,5 @@
 .root {
-  color: $color-hexagon-dark;
+  color: $color-octant-dark;
 }
 
 .mainValue {
@@ -8,5 +8,5 @@
 
 .alternativeValue {
   font-size: $font-size-12;
-  color: $color-hexagon-green2;
+  color: $color-octant-green2;
 }
