--- a/client/src/components/core/InputSelect/InputSelect.module.scss
+++ b/client/src/components/core/InputSelect/InputSelect.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   cursor: pointer;
-  color: $color-hexagon-dark;
+  color: $color-octant-dark;
 
   &:not(:last-child) {
     margin: 0 0 2rem 0;
