--- a/client/src/components/core/InputSelect/InputSelect.scss
+++ b/client/src/components/core/InputSelect/InputSelect.scss
@@ -21,7 +21,7 @@
   }
 
   &__indicator {
-    color: $color-hexagon-dark !important;
+    color: $color-octant-dark !important;
 
     &-separator {
       display: none;
