--- a/client/src/components/core/ProgressStepperSlim/ProgressStepperSlim.module.scss
+++ b/client/src/components/core/ProgressStepperSlim/ProgressStepperSlim.module.scss
@@ -21,6 +21,6 @@ $height: 0.4rem;
   }
 
   &.isCurrent {
-    background-color: $color-hexagon-green;
+    background-color: $color-octant-green;
   }
 }
