--- a/client/src/components/dedicated/AllocationSummary/AllocationSummary.module.scss
+++ b/client/src/components/dedicated/AllocationSummary/AllocationSummary.module.scss
@@ -12,7 +12,7 @@
   .label {
     text-align: left;
     flex: 1;
-    color: $color-hexagon-grey6;
+    color: $color-octant-grey6;
   }
 }
 
@@ -29,7 +29,7 @@
 .header {
   text-align: left;
   font-size: $font-size-14;
-  color: $color-hexagon-grey6;
+  color: $color-octant-grey6;
   height: 1.7rem;
   margin: 0 0 1rem 0;
 }
