--- a/client/src/components/dedicated/History/History.module.scss
+++ b/client/src/components/dedicated/History/History.module.scss
@@ -44,6 +44,6 @@
 
 .subtitle {
   font-size: $font-size-12;
-  color: $color-hexagon-grey13;
+  color: $color-octant-grey13;
   margin-top: 0.3rem;
 }
