--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -20,7 +20,7 @@
 }
 
 a {
-  color: $color-hexagon-dark;
+  color: $color-octant-dark;
   text-decoration: none;
 }
 
@@ -34,7 +34,7 @@ body {
   min-width: 32rem;
   height: 100%;
   min-height: 100%;
-  background: $color-hexagon-grey4;
-  color: $color-hexagon-dark;
+  background: $color-octant-grey4;
+  color: $color-octant-dark;
   font-size: $font-size-16;
 }
