--- a/client/src/styles/utils/_colors.scss
+++ b/client/src/styles/utils/_colors.scss
@@ -1,27 +1,27 @@
 $color-black: #000000;
 $color-white: #FFFFFF;
 
-$color-hexagon-dark: #171717;
-$color-hexagon-grey1: #CDCDCD;
-$color-hexagon-grey2: #EBEBEB;
-$color-hexagon-grey3: #CDD1CD;
-$color-hexagon-grey4: #F8F8F8;
-$color-hexagon-grey5: #B5B5B5;
-$color-hexagon-grey6: #9EA39E;
-$color-hexagon-grey7: #FAFAFA;
-$color-hexagon-grey8: #D9D9D9;
-$color-hexagon-grey10: #9E9FA3;
-$color-hexagon-grey11: #E0E0E0;
-$color-hexagon-grey12: #F3F3F3;
-$color-hexagon-grey13: #9C9C9C;
-$color-hexagon-grey14: #D7D7D7;
-$color-hexagon-green: #2D9B87;
-$color-hexagon-green2: #5B8A81;
-$color-hexagon-green3: #1D4558;
-$color-hexagon-green4: #D1E7E3;
-$color-hexagon-green5: #ADE2B3;
-$color-hexagon-red: #D0623F;
-$color-hexagon-red2: #E23600;
-$color-hexagon-orange: #FF6157;
+$color-octant-dark: #171717;
+$color-octant-grey1: #CDCDCD;
+$color-octant-grey2: #EBEBEB;
+$color-octant-grey3: #CDD1CD;
+$color-octant-grey4: #F8F8F8;
+$color-octant-grey5: #B5B5B5;
+$color-octant-grey6: #9EA39E;
+$color-octant-grey7: #FAFAFA;
+$color-octant-grey8: #D9D9D9;
+$color-octant-grey10: #9E9FA3;
+$color-octant-grey11: #E0E0E0;
+$color-octant-grey12: #F3F3F3;
+$color-octant-grey13: #9C9C9C;
+$color-octant-grey14: #D7D7D7;
+$color-octant-green: #2D9B87;
+$color-octant-green2: #5B8A81;
+$color-octant-green3: #1D4558;
+$color-octant-green4: #D1E7E3;
+$color-octant-green5: #ADE2B3;
+$color-octant-red: #D0623F;
+$color-octant-red2: #E23600;
+$color-octant-orange: #FF6157;
 
 
