--- a/client/src/views/OnboardingView/OnboardingView.module.scss
+++ b/client/src/views/OnboardingView/OnboardingView.module.scss
@@ -1,5 +1,5 @@
 .text {
-  color: $color-hexagon-grey6;
+  color: $color-octant-grey6;
   font-weight: $font-weight-semibold;
   line-height: 2.4rem;
 }
@@ -10,7 +10,7 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  background: $color-hexagon-grey4;
+  background: $color-octant-grey4;
   margin-top: 4rem;
 }
 
