--- a/client/src/components/core/BoxRounded/BoxRounded.module.scss
+++ b/client/src/components/core/BoxRounded/BoxRounded.module.scss
@@ -11,8 +11,8 @@
   user-select: none;
 
   &.isGrey {
-    color: $color-hexagon-grey10;
-    background: $color-hexagon-grey4;
+    color: $color-octant-grey10;
+    background: $color-octant-grey4;
   }
 
   &.isClickable {
@@ -34,7 +34,7 @@
   justify-content: center;
   align-self: stretch;
   height: 3.8rem;
-  border-bottom: 0.1rem solid $color-hexagon-grey4;
+  border-bottom: 0.1rem solid $color-octant-grey4;
   margin: 0 0 2rem 0;
 
   &.isGrey {
@@ -45,14 +45,14 @@
 .tab {
   position: relative;
   font-size: $font-size-14;
-  color: $color-hexagon-grey3;
+  color: $color-octant-grey3;
 
   &.isClickable {
     cursor: pointer;
   }
 
   &.isActive {
-    color: $color-hexagon-green2;
+    color: $color-octant-green2;
 
     &::after {
       content: '';
@@ -62,7 +62,7 @@
       transform: translate(-50%, 0);
       height: 0.2rem;
       width: 2.4rem;
-      background: $color-hexagon-green2;
+      background: $color-octant-green2;
     }
   }
 
@@ -72,7 +72,7 @@
 }
 
 .title {
-  color: $color-hexagon-grey6;
+  color: $color-octant-grey6;
   font-size: $font-size-14;
   font-weight: $font-weight-bold;
   margin: 0 0 0.5rem 0;
@@ -81,7 +81,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border-bottom: 0.1rem solid $color-hexagon-grey4;
+    border-bottom: 0.1rem solid $color-octant-grey4;
     height: 4.8rem;
     align-self: stretch;
   }
@@ -94,7 +94,7 @@
     }
 
     path {
-      stroke: $color-hexagon-grey6;
+      stroke: $color-octant-grey6;
     }
   }
 }
@@ -102,7 +102,7 @@
 .expandableChildren {
   width: 100%;
   padding: 1.5rem 0;
-  border-bottom: 0.1rem solid $color-hexagon-grey4;
+  border-bottom: 0.1rem solid $color-octant-grey4;
 }
 
 .children {
@@ -120,9 +120,9 @@
 .suffix {
   display: flex;
   align-items: center;
-  color: $color-hexagon-green2;
+  color: $color-octant-green2;
   font-size: $font-size-12;
-  border-top: 0.1rem solid $color-hexagon-grey4;
+  border-top: 0.1rem solid $color-octant-grey4;
   align-self: stretch;
   height: 4rem;
 }
