--- a/client/src/components/core/InputCheckbox/InputCheckbox.module.scss
+++ b/client/src/components/core/InputCheckbox/InputCheckbox.module.scss
@@ -25,7 +25,7 @@ $checkIndicatorSize: 1.4rem;
   }
 
   &:checked + .checkIndicator {
-    background: $color-hexagon-green;
+    background: $color-octant-green;
 
     &:after {
       left: calc($inputWidth - $checkIndicatorSize - 0.3rem);
@@ -35,7 +35,7 @@ $checkIndicatorSize: 1.4rem;
 }
 
 .checkIndicator {
-  background: $color-hexagon-grey3;
+  background: $color-octant-grey3;
   border-radius: 1rem;
   pointer-events: none;
 
