--- a/client/src/components/core/InputText/InputText.module.scss
+++ b/client/src/components/core/InputText/InputText.module.scss
@@ -11,14 +11,14 @@
       left: 0;
       font-size: $font-size-08;
       font-weight: $font-weight-bold;
-      color: $color-hexagon-grey6;
+      color: $color-octant-grey6;
       z-index: $z-index-2;
     }
 
     &simple {
       font-size: $font-size-12;
       font-weight: $font-weight-bold;
-      color: $color-hexagon-grey6;
+      color: $color-octant-grey6;
       margin: 0 0 0.5rem 0;
     }
   }
@@ -32,13 +32,13 @@
 
   &.variant-- {
     &simple {
-      border: 0.1rem solid $color-hexagon-grey2;
+      border: 0.1rem solid $color-octant-grey2;
       border-radius: $border-radius-04;
       background: $color-white;
       height: 4.8rem;
 
       &.isDisabled {
-        background: $color-hexagon-grey2;
+        background: $color-octant-grey2;
       }
     }
   }
@@ -60,10 +60,10 @@
       background: transparent;
 
       &.isDisabled {
-        color: $color-hexagon-grey2;
+        color: $color-octant-grey2;
 
         &::placeholder {
-          color: $color-hexagon-grey2;
+          color: $color-octant-grey2;
         }
       }
     }
@@ -98,7 +98,7 @@
       z-index: $z-index-2;
       font-weight: $font-weight-bold;
       padding: 1rem;
-      color: $color-hexagon-dark;
+      color: $color-octant-dark;
     }
   }
 }
