--- a/client/src/components/dedicated/AllocationEmptyState/AllocationEmptyState.module.scss
+++ b/client/src/components/dedicated/AllocationEmptyState/AllocationEmptyState.module.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  color: $color-hexagon-grey6;
+  color: $color-octant-grey6;
   line-height: 2.4rem;
 
   .icon {
@@ -12,8 +12,8 @@
   }
 
   .text {
-    border-top: 0.1rem solid $color-hexagon-grey12;
-    border-bottom: 0.1rem solid $color-hexagon-grey12;
+    border-top: 0.1rem solid $color-octant-grey12;
+    border-bottom: 0.1rem solid $color-octant-grey12;
     padding: 1.9rem 0;
     margin: 8rem 0 5.6rem;
   }
