--- a/client/src/components/dedicated/TimeCounter/TimeCounter.module.scss
+++ b/client/src/components/dedicated/TimeCounter/TimeCounter.module.scss
@@ -23,15 +23,15 @@
 .value {
   font-size: $font-size-20;
   font-weight: $font-weight-semibold;
-  color: $color-hexagon-dark;
+  color: $color-octant-dark;
 }
 
 .label {
   font-size: $font-size-10;
-  color: $color-hexagon-green2;
+  color: $color-octant-green2;
 }
 
 .divider {
-  color: $color-hexagon-grey3;
+  color: $color-octant-grey3;
   font-size: $font-size-20;
 }
