--- a/client/src/views/AllocationView/AllocationView.module.scss
+++ b/client/src/views/AllocationView/AllocationView.module.scss
@@ -26,7 +26,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: $color-hexagon-grey8;
+  background-color: $color-octant-grey8;
   opacity: 0.5;
   cursor: pointer;
 }
