--- a/client/src/views/ProposalView/ProposalView.module.scss
+++ b/client/src/views/ProposalView/ProposalView.module.scss
@@ -58,15 +58,15 @@
   .separator {
     width: 0.1rem;
     height: 1.5rem;
-    background: $color-hexagon-grey11;
+    background: $color-octant-grey11;
     margin: 0 0.5rem;
   }
 
   .percentage {
-    color: $color-hexagon-red2;
+    color: $color-octant-red2;
 
     &.isAboveThreshold {
-      color: $color-hexagon-green5;
+      color: $color-octant-green5;
     }
   }
 }
@@ -86,8 +86,8 @@
   align-items: center;
 
   .buttonWebsite {
-    border-top: 0.1rem solid $color-hexagon-grey4;
-    border-bottom: 0.1rem solid $color-hexagon-grey4;
+    border-top: 0.1rem solid $color-octant-grey4;
+    border-bottom: 0.1rem solid $color-octant-grey4;
     padding: 2rem 0;
   }
 }
@@ -96,7 +96,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  background: $color-hexagon-grey4;
+  background: $color-octant-grey4;
   margin-top: 4rem;
   padding-top: 4rem;
   padding-bottom: $layoutBodyMarginBottom;
@@ -108,7 +108,7 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    color: $color-hexagon-dark;
+    color: $color-octant-dark;
     font-weight: $font-weight-bold;
     margin-bottom: 2rem;
 
@@ -118,7 +118,7 @@
       height: 2.4rem;
       font-size: $font-size-12;
       color: $color-white;
-      background: $color-hexagon-green3;
+      background: $color-octant-green3;
       border-radius: $border-radius-10;
       margin: 0 0 0 1rem;
       padding: 0 1rem;
