--- a/client/src/components/core/Modal/Modal.module.scss
+++ b/client/src/components/core/Modal/Modal.module.scss
@@ -7,7 +7,7 @@
   max-height: 75%;
   overflow: auto;
   background: $color-white;
-  padding: $modalPadding;
+  padding: 3.2rem;
   text-align: left;
   box-shadow: $box-shadow-1;
   transition: bottom 0.25s linear;
