--- a/client/src/components/dedicated/AllocationSummary/AllocationSummary.module.scss
+++ b/client/src/components/dedicated/AllocationSummary/AllocationSummary.module.scss
@@ -20,6 +20,10 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
+
+  .budgetValue {
+    text-align: left;
+  }
 }
 
 .separator {
