--- a/client/src/components/dedicated/ProposalItem/ProposalItem.module.scss
+++ b/client/src/components/dedicated/ProposalItem/ProposalItem.module.scss
@@ -7,7 +7,7 @@ $paddingBody: 2.4rem;
   border-radius: $border-radius-16;
   background: $color-white;
 
-  &.isClickabe {
+  &.isClickable {
     cursor: pointer;
   }
 
