--- a/client/src/components/core/InputText/InputText.module.scss
+++ b/client/src/components/core/InputText/InputText.module.scss
@@ -16,6 +16,7 @@
     }
 
     &simple {
+      text-align: left;
       font-size: $font-size-12;
       font-weight: $font-weight-bold;
       color: $color-octant-grey6;
