--- a/client/src/components/core/BoxRounded/BoxRounded.module.scss
+++ b/client/src/components/core/BoxRounded/BoxRounded.module.scss
@@ -31,7 +31,7 @@
 
 .tabs {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-self: stretch;
   height: 3.8rem;
   border-bottom: 0.1rem solid $color-octant-grey4;
