OCT-306 Projects view: sort them by total allocation

--- a/client/src/views/ProposalView/ProposalView.module.scss
+++ b/client/src/views/ProposalView/ProposalView.module.scss
@@ -129,6 +129,10 @@
     display: flex;
     align-items: center;
     font-weight: $font-weight-semibold;
+
+    &:not(:last-child) {
+      margin-bottom: 1.6rem;
+    }
   }
 
   .donorIcon {
