OCT-209 Add allocated state to project tiles in Allocate view

--- a/client/src/components/dedicated/AllocationItem/AllocationItem.module.scss
+++ b/client/src/components/dedicated/AllocationItem/AllocationItem.module.scss
@@ -1,5 +1,9 @@
 .box {
   user-select: none;
+
+  &.isAllocatedTo {
+    border: 0.1rem solid $color-octant-green;
+  }
 }
 
 .details, .value, .button {
