OCT-273 Implement ETH withdrawals in the client

--- a/client/src/components/core/InputText/InputText.module.scss
+++ b/client/src/components/core/InputText/InputText.module.scss
@@ -77,6 +77,11 @@
 
     &simple {
       padding: 1.6rem 0 1.6rem 1.6rem;
+
+      &::placeholder {
+        color: $color-octant-grey15;
+        font-weight: $font-weight-semibold;
+      }
     }
   }
 }
