--- a/client/src/styles/utils/_colors.scss
+++ b/client/src/styles/utils/_colors.scss
@@ -15,6 +15,7 @@ $color-octant-grey11: #E0E0E0;
 $color-octant-grey12: #F3F3F3;
 $color-octant-grey13: #9C9C9C;
 $color-octant-grey14: #D7D7D7;
+$color-octant-grey15: #BABABA;
 $color-octant-green: #2D9B87;
 $color-octant-green2: #5B8A81;
 $color-octant-green3: #1D4558;
