OCT-342 Adjust breakpoints for desktop modals

--- a/client/src/components/core/Modal/Modal.module.scss
+++ b/client/src/components/core/Modal/Modal.module.scss
@@ -53,7 +53,7 @@
 }
 
 
-@media only screen and (min-width: 1200px) {
+@media #{$desktop-up} {
   .root {
     width: 47.2rem;
     transform: translate(-50%, 50%);
